<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="2dp"
    android:layout_marginTop="10dp"
    app:elevation="4dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/biryani"
            android:text="@string/this_course_includes"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_atom"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingVertical="4dp"
            android:text="@string/e_certificate" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_file_regular"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingVertical="4dp"
            android:text="@string/pdf_modules" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_life_ring_regular"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:paddingVertical="4dp"
            android:text="@string/lifetime_video_access" />

    </LinearLayout>

</androidx.cardview.widget.CardView>