<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="8dp"
    tools:context=".ui.featured.FeaturedFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--featured-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/biryani"
            android:paddingVertical="8dp"
            android:text="@string/featured"
            android:textColor="@android:color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/featuredRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_adapter_courses" />

        <!--kategori-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp"
            android:weightSum="2">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/biryani"
                android:text="@string/categories"
                android:textColor="@android:color/black" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/biryani"
                android:text="@string/see_all"
                android:visibility="gone"
                android:textAlignment="textEnd"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:id="@+id/kategoriList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:flexDirection="row"
            app:flexWrap="wrap" />

        <!--Android-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/biryani"
            android:paddingVertical="8dp"
            android:text="@string/top_courses_in_android"
            android:textColor="@android:color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/androidRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <!--Digital Marketing-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/biryani"
            android:paddingVertical="8dp"
            android:text="@string/top_courses_in_digital_marketing"
            android:textColor="@android:color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/digitalMarketingRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


        <!--Flutter-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/biryani"
            android:paddingVertical="8dp"
            android:text="@string/top_courses_in_flutter"
            android:textColor="@android:color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/flutterRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <!--iOS-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/biryani"
            android:paddingVertical="8dp"
            android:text="@string/top_courses_in_ios"
            android:textColor="@android:color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/iOSRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <!--SEO-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/biryani"
            android:paddingVertical="8dp"
            android:text="@string/top_courses_in_seo"
            android:textColor="@android:color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/seoRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <!--Web-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/biryani"
            android:paddingVertical="8dp"
            android:text="@string/top_courses_in_web"
            android:textColor="@android:color/black" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/webRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>