<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/containerInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/coursesName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/biryani"
                android:text="@string/microsoft_excel_excel_from_beginner_to_advance"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="80dp" />
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/videoPreviewContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="45dp"
            android:layout_marginTop="-75dp"
            app:cardCornerRadius="5dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/coursesCover"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@color/grey" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/ic_play" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/bg_gradient"
                    android:fontFamily="@font/biryani"
                    android:paddingTop="2dp"
                    android:text="@string/preview_this_courses"
                    android:textAlignment="center"
                    android:textColor="@android:color/white" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="2dp"
            android:layout_marginBottom="8dp"
            android:labelFor="@+id/videoPreviewContainer"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <TextView
                    android:id="@+id/harga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="10dp"
                    android:fontFamily="@font/biryani"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/hargaCoret"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_toEndOf="@id/harga"
                    android:fontFamily="@font/biryani"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small" />

            </RelativeLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buyNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_light"
                android:fontFamily="@font/biryani"
                android:text="@string/buy_now"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/addToCart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:fontFamily="@font/biryani"
                android:text="@string/add_to_cart"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>